[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/UserInterface/PauseMenu.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Main/Game.gd" type="Script" id=2]
[ext_resource path="res://src/Level/Level.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/Actors/Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/UserInterface/GameOverMenu.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/theme/fonts/kenney_mini_square.ttf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 6 )

[node name="Game" type="Node"]
pause_mode = 2
script = ExtResource( 2 )

[node name="Level" parent="." instance=ExtResource( 3 )]

[node name="Player" parent="Level" instance=ExtResource( 4 )]
position = Vector2( 90, 546 )

[node name="InterfaceLayer" type="CanvasLayer" parent="."]
layer = 100

[node name="GameOverMenu" parent="InterfaceLayer" instance=ExtResource( 5 )]

[node name="PauseMenu" parent="InterfaceLayer" instance=ExtResource( 1 )]

[node name="TimerLebel" type="Label" parent="InterfaceLayer"]
margin_left = 400.0
margin_top = 5.0
margin_right = 468.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 1 )
text = "Time"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameTimer" type="Timer" parent="."]
wait_time = 40.0
one_shot = true
autostart = true

[connection signal="timeout" from="GameTimer" to="." method="_on_GameTimer_timeout"]
